--- a/public/control.html
+++ b/public/control.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Laserpointer v3.1</title>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
 <style>
     body {
       background: black;
@@ -65,7 +65,7 @@
       opacity: 0.5;
     }
   </style>
-</head>
+</meta></head>
 <body>
 <div id="version">v3.4</div>
 <h2>Laserpointer Steuerung</h2>
