--- a/public/control.html
+++ b/public/control.html
@@ -3,7 +3,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Laserpointer v3.4</title>
+  <title>Laserpointer v3.5</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     body {
@@ -66,7 +66,7 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.4</div>
+  <div id="version">v3.5</div>
   <h2>Laserpointer Steuerung</h2>
   <div id="colorPicker"></div>
   <button id="toggleMode">Touch</button>
@@ -105,6 +105,20 @@
       mode = (mode === 'touch' ? 'motion' : 'touch');
       toggleBtn.textContent = (mode === 'touch' ? 'Touch' : 'Motion');
     drawarea.style.display = (mode === 'touch' ? 'block' : 'none');
+    if (mode === 'motion') {
+      if (typeof DeviceOrientationEvent !== "undefined" &&
+          typeof DeviceOrientationEvent.requestPermission === "function") {
+        DeviceOrientationEvent.requestPermission().then(response => {
+          if (response === "granted") {
+            window.addEventListener("deviceorientation", handleOrientation);
+          } else {
+            alert("Bewegungsdaten wurden nicht freigegeben.");
+          }
+        }).catch(console.error);
+      } else {
+        window.addEventListener("deviceorientation", handleOrientation);
+      }
+    }
       laserBtn.style.display = (mode === 'motion' ? 'block' : 'none');
     };
 
